<resources>
    <string name="app_name">SplitIT</string>
    <string name="action_settings">Settings</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Zapisz</string>
    <string name="empty_not_saved">Zmiany nie zostały zapisane</string>
    <string name="word_saved">Zapisano</string>
    <string name="friend_saved">Zapisano</string>
    <string name="name">Name...</string>
    <string name="expense">Wydatek</string>
    <string name="value">Kwota</string>
    <string name="button_back">Wstecz</string>
    <string name="button_clearAll">Wyczyść</string>
    <string name="usersList">Lista wybranych znajomych \n</string>


    <string-array name="friendsList">
        <item>Marek</item>
        <item>Adam</item>
        <item>Marta</item>
        <item>Natalia</item>
    </string-array>
    <string name="friendsPrompt">Wybierz znajomego</string>

    <!-- Add friend page -->
    <string name="pageLabel">Dodaj znajomego</string>
    <string name="nameLabel">Imię</string>
    <string name="surnameLabel">Nazwisko</string>


    <string name="nameInput">Imię</string>
    <string name="surnameInput">Nazwisko</string>
    <string name="addFriendButton">Dodaj</string>
    <string name="btnCancelAddFriend">Anuluj</string>
    <string name="action_friend">Dodaj znajomego</string>
    <string name="expensesList">Lista wydatków: \n</string>
    <string name="button_dodaj">Dodaj</string>
    <string name="suma">Suma wydatków jest pusta. Dodaj znajomego do wydatku aby określić sumę</string>
    <string name="title">Tytuł</string>
    <string name="value2">Kwota: \n</string>
    <string name="rTvNameHint">Name</string>
    <string name="rTvExpenseHint">Expense</string>
    <string name="rTvValueHint">Value</string>
    <string name="welcom_text">Witaj Adamie! \n Pożyczyłes łacznie 142 zł</string>
    <string name="title_activity_recognize_bill">recognizeBill</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="history">Historia</string>


</resources>
