<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36362F">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="109dp"
        android:layout_height="103dp"
        android:translationY="-7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/component1" />

    <EditText
        android:id="@+id/etExpense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/button_round_corner"
        android:fontFamily="sans-serif-light"
        android:hint="@string/title"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:padding="@dimen/small_padding"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/button_round_corner"
        android:fontFamily="sans-serif-light"
        android:hint="@string/value"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:padding="@dimen/small_padding"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/users_dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValue"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_15dp_orange"
        android:text="@string/button_save"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_15dp_orange"
        android:text="@string/button_dodaj"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_15dp_orange"
        android:text="@string/button_back"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFriendsExpenses"
        android:layout_width="381dp"
        android:layout_height="0dp"
        android:background="#36362F"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clearAll"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/recyclerview_item3" />

    <TextView
        android:id="@+id/tvSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/suma"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_Btn"
        android:layout_width="370dp"
        android:layout_height="41dp"
        app:layout_constraintEnd_toEndOf="@+id/users_dropdown"
        app:layout_constraintStart_toStartOf="@+id/users_dropdown"
        app:layout_constraintTop_toBottomOf="@+id/users_dropdown">

        <Switch
            android:id="@+id/sw_addMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:checked="true"
            android:minHeight="48dp"
            android:shadowColor="#D27C2C"
            android:text="Licz ze mną"
            android:textColor="#FBFBFB"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Switch
            android:id="@+id/sw_proportional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:minHeight="48dp"
            android:shadowColor="#D27C2C"
            android:text="Dziel równo"
            android:textColor="#FBFBFB"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_clearAll"
        android:layout_width="72dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_round_corner"
        android:padding="5dp"
        android:text="@string/button_clearAll"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/users_dropdown"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Lista znajomych:"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E9E9E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_Btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
